--- a/spring-boot-develop-tool-portal/pom.xml
+++ b/spring-boot-develop-tool-portal/pom.xml
@@ -22,6 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <spring-boot-starter-web.version>2.1.0.RELEASE</spring-boot-starter-web.version>
     </properties>
 
     <dependencies>
@@ -40,6 +41,12 @@
             <groupId>com.timocode.datavisualization</groupId>
             <artifactId>spring-boot-develop-tool-storage</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot-starter-web.version}</version>
         </dependency>
     </dependencies>
 
