--- a/spring-boot-develop-tool-storage/pom.xml
+++ b/spring-boot-develop-tool-storage/pom.xml
@@ -19,7 +19,7 @@
 
     <properties>
         <mybatis-spring-boot.version>1.1.1</mybatis-spring-boot.version>
-        <tk.mybatis.version>3.3.6</tk.mybatis.version>
+        <tk.mybatis.version>4.0.4</tk.mybatis.version>
         <persistence.version>1.0</persistence.version>
         <!-- MyBatis Generator-->
         <mybatis.generator.version>1.3.2</mybatis.generator.version>
@@ -50,6 +50,11 @@
             <groupId>javax.persistence</groupId>
             <artifactId>persistence-api</artifactId>
             <version>${persistence.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
         </dependency>
 
     </dependencies>
