--- a/spring-boot-develop-tool-portal/src/main/resources/application.yml
+++ b/spring-boot-develop-tool-portal/src/main/resources/application.yml
@@ -1,13 +1,3 @@
-server:
-  port: 8080
 spring:
-  application:
-    name: portal
-  datasource:
-    url: jdbc:mysql://47.107.177.228:3306/timo?useUnicode=true&characterEncoding=utf8
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    platform: mysql
-    username: root
-    password: root123456
-debug: true
-logging.level.org.springframework.boot.autoconfigure: ERROR
+  profiles:
+    active: dev,config
