--- a/spring-boot-develop-tool-common/pom.xml
+++ b/spring-boot-develop-tool-common/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>spring-webmvc</artifactId>
             <version>4.3.13.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
