--- a/spring-boot-develop-tool-portal/pom.xml
+++ b/spring-boot-develop-tool-portal/pom.xml
@@ -43,7 +43,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.4</version>
             <scope>provided</scope>
         </dependency>
 
@@ -54,9 +53,15 @@
             <artifactId>spring-boot-develop-tool-storage</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.timocode.common</groupId>-->
+            <!--<artifactId>spring-boot-develop-tool-common</artifactId>-->
+            <!--<version>0.0.1-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId></groupId>
-            <artifactId></artifactId>
+            <groupId>com.timocode.redis</groupId>
+            <artifactId>spring-boot-develop-tool-redis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
