--- a/spring-boot-develop-tool-redis/pom.xml
+++ b/spring-boot-develop-tool-redis/pom.xml
@@ -30,9 +30,9 @@
             <version>3.0.0-m1</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
