--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /spring-boot-develop-tool-storage/target/
 
 /spring-boot-develop-tool-storage/spring-boot-develop-tool-storage.iml
+/spring-boot-develop-tool-rabbitMQ/spring-boot-develop-tool-rabbitMQ.iml
