--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <module>spring-boot-develop-tool-storage</module>
         <module>spring-boot-develop-tool-common</module>
         <module>spring-boot-develop-tool-redis</module>
+        <module>spring-boot-develop-tool-rabbitmq</module>
     </modules>
 
 
