--- a/spring-boot-develop-tool-portal/pom.xml
+++ b/spring-boot-develop-tool-portal/pom.xml
@@ -46,6 +46,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- AOP -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
 
         <!-- module dependency-->
         <dependency>
@@ -53,14 +59,19 @@
             <artifactId>spring-boot-develop-tool-storage</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.timocode.common</groupId>-->
-            <!--<artifactId>spring-boot-develop-tool-common</artifactId>-->
-            <!--<version>0.0.1-SNAPSHOT</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.timocode.common</groupId>
+            <artifactId>spring-boot-develop-tool-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.timocode.redis</groupId>
             <artifactId>spring-boot-develop-tool-redis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.timocode.rabbitmq</groupId>
+            <artifactId>spring-boot-develop-tool-rabbitmq</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
