--- a/spring-boot-develop-tool-rabbitmq/pom.xml
+++ b/spring-boot-develop-tool-rabbitmq/pom.xml
@@ -9,30 +9,16 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.timocode.common</groupId>
-    <artifactId>spring-boot-develop-tool-common</artifactId>
+    <groupId>com.timocode.rabbitmq</groupId>
+    <artifactId>spring-boot-develop-tool-rabbitmq</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-
-    <name>spring-boot-develop-tool-common</name>
-    <description>common module</description>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>4.3.13.RELEASE</version>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.1.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
